--- a/pages/end.html
+++ b/pages/end.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/style.css">
 </head>
 <body>
     <div class="container">
@@ -17,7 +17,7 @@
                 <button class="btn" id="saveScoreBtn" type="admit" 
                 onclick="saveHighScore(event)" disabled>Save</button>
             </form>
-            <a href="/game.html" class="btn">Play Again</a>
+            <a href="/pages/game.html" class="btn">Play Again</a>
             <a href="/index.html" class="btn">Go Home</a>
         </div>
     </div>
